--- a/s3prl/pretrain/tera/config_runner.yaml
+++ b/s3prl/pretrain/tera/config_runner.yaml
@@ -18,8 +18,9 @@ optimizer:
 
 pretrain_expert:
   datarc:
-    num_workers: 16
-    train_batch_size: 256
+    #num_workers: 16
+    num_workers: 0 #TODO only for debug
+    train_batch_size: 16
     max_timestep: 0 # Max length for audio feature (0 for no restriction, negative value to set minimum timestep)
     libri_root: '/storage/czw/LanguageEcog/semantics/seeg_samples_all_day_data_laplacian_T1Id6' # If raw libri data is provided, use on-the-fly feature extraction, else use the pre-extracted features under `file_path`
     file_path: 'data/len_for_bucket' # Pre-extracted features path. When using on-the-fly feature extraction, this is used to provide length for bucketing.
